--- a/app/src/main/res/layout/scrollable_content.xml
+++ b/app/src/main/res/layout/scrollable_content.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_name"
             android:scaleType="centerCrop"
-            android:src="@drawable/photo"
+            android:src="@drawable/profile2"
             />
 
         <TextView
