--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -952,15 +952,15 @@
 
 
                     <TextView
-                        android:text="Material Design"
-                        android:layout_toRightOf="@+id/imgAnim"
-                        android:layout_centerVertical="true"
-                         
-                        android:textStyle="bold"
-                        android:textSize="18dp"
-                        android:textColor="@color/colorPrimary"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+
+                        android:layout_toRightOf="@+id/imgAnim"
+                        android:text="Material Design"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
 
                     <ImageView
                         android:id="@+id/switcherAnim"
@@ -1224,6 +1224,34 @@
                         android:text="Interface Animation"
                         android:textStyle="bold"
                         android:textSize="16dp"
+                        android:textColor="@color/white"
+                        android:layout_marginLeft="5dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llRubberPicker"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <com.airbnb.lottie.LottieAnimationView
+
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        app:lottie_colorFilter="@color/white"
+                        app:lottie_autoPlay="true"
+                        app:lottie_fileName="item.json"
+                        app:lottie_loop="true" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="Rubber Picker"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+
                         android:textColor="@color/white"
                         android:layout_marginLeft="5dp" />
                 </LinearLayout>
