--- a/app/src/main/res/layout/scrollable_content.xml
+++ b/app/src/main/res/layout/scrollable_content.xml
@@ -5,44 +5,49 @@
     android:layout_height="match_parent"
     android:background="@color/menu_item_background">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_name"
             android:scaleType="centerCrop"
             android:src="@drawable/profile2"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvTitle"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/main_screen_side_padding"
             android:layout_marginTop="@dimen/text_top_padding"
             android:layout_marginEnd="@dimen/main_screen_side_padding"
             android:text="@string/title"
-            android:textColor="#212121"
             android:textDirection="locale"
-            android:textSize="@dimen/title_text_size"  />
+            android:textSize="@dimen/title_text_size"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageView" />
 
         <TextView
             android:id="@+id/tvText"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/main_screen_side_padding"
             android:layout_marginTop="@dimen/main_screen_side_padding"
             android:layout_marginEnd="@dimen/main_screen_side_padding"
             android:text="@string/text"
-            android:textColor="#212121"
             android:textDirection="locale"
-            android:textSize="@dimen/menu_text_size" />
+            android:textSize="@dimen/menu_text_size"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
