--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,14 +116,14 @@
 
 
             <TextView
-                android:text="Bottom Navigation Bar"
-                android:layout_toRightOf="@+id/img1"
-                android:layout_centerVertical="true"
-                android:textStyle="bold"
-                android:textSize="18dp"
-                android:textColor="@color/colorPrimary"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/img1"
+                android:text="Bottom Navigation Bar"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/switcher"
@@ -144,7 +144,7 @@
     <com.nilprojects.androiduidesign.ExpandableLayout
         android:id="@+id/expandableLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/expandableViewHeight"
+        android:layout_height="300dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="@color/colorPrimaryDark"
@@ -317,6 +317,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Floating Bottom Nav"
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:textColor="@color/white"
+                android:layout_marginLeft="5dp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/llFoldingTapBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:lottie_colorFilter="@color/white"
+                app:lottie_autoPlay="true"
+                app:lottie_fileName="item.json"
+                app:lottie_loop="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Folding Tap Bar"
                 android:textStyle="bold"
                 android:textSize="16dp"
                 android:textColor="@color/white"
