--- a/app/src/main/res/layout/fragment_folding_tap_output.xml
+++ b/app/src/main/res/layout/fragment_folding_tap_output.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.FoldingTapBar.Fragment.folding_tap_output">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        >
 
-</FrameLayout>
+        <client.yalantis.com.foldingtabbar.FoldingTabBar
+            android:id="@+id/folding_tapBarMenu"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="24dp"
+            app:tbm_backgroundColor="@color/colorPrimary"
+            app:tbm_menuAnchor="bottom"
+            android:layout_width="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            app:menu="@menu/foldingtap"
+            >
+
+
+
+
+        </client.yalantis.com.foldingtabbar.FoldingTabBar>
+
+    </FrameLayout>
+</RelativeLayout>
